force-app/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <label>Opportunity</label>
</CustomObject>