force-app/main/default/objects/Opportunity/fields/DeliveryInstallationStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInstallationStatus__c</fullName>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <isActive>true</isActive>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Yet to begin</fullName>
                <isActive>true</isActive>
                <label>Yet to begin</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>true</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <label>Delivery/Installation Status</label>
</CustomField>