force-app/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <type>Text</type>
    <length>8</length>
    <label>Order Number</label>
</CustomField>